--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,19 +1,104 @@
 name: CI
 
 on:
+  push:
+    branches: [main, master]
+  pull_request:
+    branches: [main, master]
   workflow_dispatch:
 
-jobs:
-  build_and_test:
-    runs-on: ubuntu-latest
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 
+env:
+  NODE_VERSION: 20
+  PNPM_VERSION: 10
+
+jobs:
+  # ==========================================
+  # Job 1: Lint (не блокирует build, но показывает ошибки)
+  # ==========================================
+  lint:
+    name: Lint
+    runs-on: ubuntu-latest
+    continue-on-error: true  # Не блокирует CI, пока ошибки не исправлены
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Install pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: ${{ env.PNPM_VERSION }}
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ env.NODE_VERSION }}
+          cache: 'pnpm'
+
+      - name: Install dependencies
+        run: pnpm install --frozen-lockfile
+
+      - name: Generate Prisma Client
+        run: pnpm -F @polygram/server db:generate
+
+      - name: Lint all packages
+        run: pnpm lint
+
+  # ==========================================
+  # Job 2: Type Check (matrix: Node.js versions)
+  # ==========================================
+  typecheck:
+    name: Type Check (Node ${{ matrix.node }})
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        node: [18, 20, 22]
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Install pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: ${{ env.PNPM_VERSION }}
+
+      - name: Setup Node.js ${{ matrix.node }}
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ matrix.node }}
+          cache: 'pnpm'
+
+      - name: Install dependencies
+        run: pnpm install --frozen-lockfile
+
+      - name: Generate Prisma Client
+        run: pnpm -F @polygram/server db:generate
+
+      - name: Type check client
+        run: pnpm -F @polygram/client build --mode development
+
+      - name: Type check server
+        run: pnpm -F @polygram/server build
+
+  # ==========================================
+  # Job 3: Tests (robust, с сервисами)
+  # ==========================================
+  test:
+    name: Tests
+    runs-on: ubuntu-latest
+    needs: typecheck
+    
     services:
       postgres:
-        image: postgres:16
+        image: postgres:16-alpine
         env:
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: postgres
-          POSTGRES_DB: polygram
+          POSTGRES_DB: polygram_test
         ports:
           - 5432:5432
         options: >-
@@ -21,8 +106,9 @@ jobs:
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
+      
       redis:
-        image: redis:7
+        image: redis:7-alpine
         ports:
           - 6379:6379
         options: >-
@@ -32,38 +118,158 @@ jobs:
           --health-retries 5
 
     env:
-      DATABASE_URL: "postgresql://postgres:postgres@localhost:5432/polygram?schema=public"
+      DATABASE_URL: "postgresql://postgres:postgres@localhost:5432/polygram_test?schema=public"
       REDIS_URL: "redis://localhost:6379"
-      BOT_TOKEN: ${{ secrets.BOT_TOKEN }}
-      OPENROUTER_API_KEY: ${{ secrets.OPENROUTER_API_KEY }}
-      CRYPTOPANIC_API_KEY: ${{ secrets.CRYPTOPANIC_API_KEY }}
-      ADMIN_CHAT_ID: ${{ secrets.ADMIN_CHAT_ID }}
+      NODE_ENV: test
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
 
       - name: Install pnpm
         uses: pnpm/action-setup@v4
         with:
-          version: 10
+          version: ${{ env.PNPM_VERSION }}
 
-      - name: Set up Node.js
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: ${{ env.NODE_VERSION }}
           cache: 'pnpm'
 
       - name: Install dependencies
-        run: pnpm install
+        run: pnpm install --frozen-lockfile
 
       - name: Generate Prisma Client
         run: pnpm -F @polygram/server db:generate
 
-      - name: Run migrations
+      - name: Run database migrations
         run: pnpm -F @polygram/server db:migrate
 
       - name: Run tests
-        run: pnpm test
+        run: pnpm test -- --reporter=verbose
 
-      - name: Build all packages
-        run: pnpm build
+      - name: Run tests with coverage
+        run: pnpm test -- --coverage
+        continue-on-error: true  # Coverage может падать из-за отсутствия пакетов
+
+      - name: Upload coverage reports
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: coverage-report
+          path: |
+            **/coverage/
+            !**/node_modules/
+          retention-days: 7
+
+  # ==========================================
+  # Job 4: Build (matrix: app × Node version)
+  # ==========================================
+  build:
+    name: Build ${{ matrix.app }} (Node ${{ matrix.node }})
+    runs-on: ubuntu-latest
+    needs: test
+    
+    strategy:
+      fail-fast: false
+      matrix:
+        app: [client, server, shared]
+        node: [20]
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Install pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: ${{ env.PNPM_VERSION }}
+
+      - name: Setup Node.js ${{ matrix.node }}
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ matrix.node }}
+          cache: 'pnpm'
+
+      - name: Install dependencies
+        run: pnpm install --frozen-lockfile
+
+      - name: Generate Prisma Client
+        if: matrix.app == 'server'
+        run: pnpm -F @polygram/server db:generate
+
+      - name: Build @polygram/${{ matrix.app }}
+        run: pnpm -F @polygram/${{ matrix.app }} build
+
+      - name: Upload build artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: build-${{ matrix.app }}
+          path: |
+            apps/${{ matrix.app }}/dist/
+            packages/${{ matrix.app }}/dist/
+          retention-days: 7
+
+  # ==========================================
+  # Job 5: Docker Build (optional)
+  # ==========================================
+  docker:
+    name: Docker Build
+    runs-on: ubuntu-latest
+    needs: build
+    if: github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name == github.repository
+    
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Build Docker image (server)
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: ./apps/server/Dockerfile
+          push: false
+          tags: polygram-server:latest
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+
+      - name: Build Docker image (client)
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: ./apps/client/Dockerfile
+          push: false
+          tags: polygram-client:latest
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+        continue-on-error: true  # На случай если Dockerfile нет
+
+  # ==========================================
+  # Job 6: Summary (итоговый статус)
+  # ==========================================
+  summary:
+    name: CI Summary
+    runs-on: ubuntu-latest
+    needs: [typecheck, test, build, docker]
+    if: always()
+    steps:
+      - name: Check all jobs status
+        run: |
+          echo "Type Check: ${{ needs.typecheck.result }}"
+          echo "Test: ${{ needs.test.result }}"
+          echo "Build: ${{ needs.build.result }}"
+          echo "Lint: ${{ needs.lint.result }}"
+          echo "Docker: ${{ needs.docker.result }}"
+          
+          if [ "${{ needs.typecheck.result }}" != "success" ] || \
+             [ "${{ needs.test.result }}" != "success" ] || \
+             [ "${{ needs.build.result }}" != "success" ]; then
+            echo "❌ CI failed"
+            exit 1
+          fi
+          
+          echo "✅ All checks passed"
