--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -7,6 +7,8 @@
     "dev": "vite",
     "dev:https": "cross-env HTTPS=true vite",
     "build": "tsc --noEmit && vite build",
+    "test": "vitest run --passWithNoTests",
+    "test:watch": "vitest",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "lint:fix": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0 --fix",
     "preview": "vite preview"
@@ -14,6 +16,8 @@
   "dependencies": {
     "@polygram/shared": "workspace:*",
     "@telegram-apps/telegram-ui": "^2.1.9",
+    "clsx": "^2.0.0",
+    "tailwind-merge": "^2.0.0",
     "@tma.js/sdk-react": "^3.0.8",
     "@tonconnect/ui-react": "^2.2.0",
     "eruda": "^3.4.3",
@@ -28,6 +32,11 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.23.0",
+    "@testing-library/jest-dom": "^6.0.0",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.0.0",
+    "jsdom": "^24.0.0",
+    "vitest": "^3.0.0",
     "@tailwindcss/postcss": "^4.1.18",
     "@types/node": "^20.19.11",
     "@types/react": "^18.3.24",
