feat: finalize build process and fix test routing

--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -19,13 +19,13 @@
   },
   "dependencies": {
     "@fastify/cors": "^10.0.0",
+    "@fastify/rate-limit": "^10.3.0",
     "@fastify/websocket": "^11.0.0",
     "@google/genai": "^1.39.0",
     "@polygram/shared": "workspace:*",
     "@prisma/client": "^6.0.0",
     "@ton/core": "^0.63.0",
     "@ton/crypto": "^3.3.0",
-    "@tonconnect/sdk": "^3.4.1",
     "axios": "^1.13.4",
     "dotenv": "^16.4.5",
     "fastify": "^5.0.0",
@@ -38,14 +38,13 @@
   "devDependencies": {
     "@eslint/js": "^9.0.0",
     "@types/node": "^20.0.0",
-    "@types/supertest": "^6.0.0",
     "@types/ws": "^8.18.1",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
+    "@vitest/coverage-v8": "^4.0.18",
     "eslint": "^9.0.0",
     "globals": "^15.0.0",
     "prisma": "^6.0.0",
-    "supertest": "^7.0.0",
     "tsx": "^4.0.0",
     "typescript": "^5.0.0",
     "vitest": "^3.0.0"
