--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -16,10 +16,9 @@
   "dependencies": {
     "@polygram/shared": "workspace:*",
     "@telegram-apps/telegram-ui": "^2.1.9",
-    "clsx": "^2.0.0",
-    "tailwind-merge": "^2.0.0",
     "@tma.js/sdk-react": "^3.0.8",
     "@tonconnect/ui-react": "^2.2.0",
+    "clsx": "^2.0.0",
     "eruda": "^3.4.3",
     "framer-motion": "^11.0.0",
     "lightweight-charts": "^5.1.0",
@@ -27,30 +26,27 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.30.1",
-    "zod": "^3.23.8",
+    "tailwind-merge": "^2.0.0",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.23.0",
     "@testing-library/jest-dom": "^6.0.0",
     "@testing-library/react": "^14.0.0",
-    "@testing-library/user-event": "^14.0.0",
-    "jsdom": "^24.0.0",
-    "vitest": "^3.0.0",
-    "@tailwindcss/postcss": "^4.1.18",
     "@types/node": "^20.19.11",
     "@types/react": "^18.3.24",
     "@types/react-dom": "^18.3.7",
     "@typescript-eslint/eslint-plugin": "^8.28.0",
     "@typescript-eslint/parser": "^8.28.0",
     "@vitejs/plugin-react-swc": "^3.11.0",
+    "@vitest/coverage-v8": "^4.0.18",
     "autoprefixer": "^10.4.24",
     "cross-env": "^7.0.3",
     "eslint": "^9.34.0",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
-    "gh-pages": "^6.3.0",
     "globals": "^15.15.0",
+    "jsdom": "^24.0.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.19",
     "terser": "^5.44.0",
@@ -58,6 +54,7 @@
     "typescript-eslint": "^8.40.0",
     "vite": "^6.3.5",
     "vite-plugin-mkcert": "^1.17.8",
-    "vite-tsconfig-paths": "^5.1.4"
+    "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "^3.0.0"
   }
 }
