--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
   "devDependencies": {
     "knip": "^5.0.0",
     "vitest": "^3.0.0",
-    "typescript": "^5.0.0",
-    "prettier": "^3.0.0"
+    "typescript": "^5.0.0"
   }
 }
