--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ concurrency:
   cancel-in-progress: true
 
 env:
-  NODE_VERSION: 20
+  NODE_VERSION: 22
   PNPM_VERSION: 10
 
 jobs:
@@ -56,7 +56,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        node: [18, 20, 22]
+        node: [22]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -167,7 +167,7 @@ jobs:
   # Job 4: Build (matrix: app × Node version)
   # ==========================================
   build:
-    name: Build ${{ matrix.app }} (Node ${{ matrix.node }})
+    name: "@polygram/${{ matrix.app }}"
     runs-on: ubuntu-latest
     needs: test
     
@@ -175,7 +175,7 @@ jobs:
       fail-fast: false
       matrix:
         app: [client, server, shared]
-        node: [20]
+        node: [22]
 
     steps:
       - name: Checkout
