ci: fix Docker Prisma paths and CI coverage collection

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -146,11 +146,8 @@ jobs:
       - name: Run database migrations
         run: pnpm -F @polygram/server db:migrate
 
-      - name: Run tests
-        run: pnpm test -- --reporter=verbose
-
       - name: Run tests with coverage
-        run: pnpm test -- --coverage
+        run: pnpm -r test -- --coverage --reporter=verbose
         continue-on-error: true  # Coverage может падать из-за отсутствия пакетов
 
       - name: Upload coverage reports
