feat: add health check, graceful shutdown, and mock TON service
Infrastructure:
- Add /health endpoint for monitoring
- Implement graceful shutdown (SIGINT/SIGTERM handlers)
- Add structured JSON logging for bot commands
- Fix NewsService timeout with AbortController (10s)

TON Service:
- Create ITonService interface for SOLID compliance
- Implement MockTonService for dev/testing
- Add USE_MOCK_TON env variable toggle
- Add stop() methods for cleanup

Bot:
- Add /mock_deposit command (admin-only)
- Improve error handling with detailed messages
- Remove as any casts in service initialization

Config:
- Add docker-compose.yml for local development
- Update .gitignore to exclude generated prisma client
- Add .dockerignore and .npmrc

Tested: All 25 tests passing

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,10 @@ pnpm-debug.log*
 cache/
 *.db
 *.sqlite
+
+# Generated Prisma Client
+apps/server/src/infrastructure/prisma/
+
+# Temporary/Documentation files
+PRISMA_DEPLOYMENT_ERROR.md
+AGENTS.md
