--- a/apps/server/Dockerfile
+++ b/apps/server/Dockerfile
@@ -3,6 +3,7 @@ FROM node:22-alpine AS builder
 
 # Install pnpm
 RUN npm install -g pnpm@10
+ENV CI=true
 
 WORKDIR /app
 
@@ -12,28 +13,32 @@ COPY . .
 # Install all dependencies
 RUN pnpm install --frozen-lockfile
 
-# Generate Prisma Client and build
-RUN pnpm -F @polygram/server build
+# Generate Prisma Client and build all packages
+# The client is now generated INTO src/infrastructure/prisma
+RUN pnpm -F @polygram/server db:generate && pnpm -r build
+
+# CRITICAL: Copy the generated JS client from src to dist because tsc doesn't do it
+RUN mkdir -p apps/server/dist/apps/server/src/infrastructure/prisma && \
+    cp -r apps/server/src/infrastructure/prisma/* apps/server/dist/apps/server/src/infrastructure/prisma/
 
 # Isolate the server package into /isolated
-# This command copies the package and its production dependencies (including shared workspace)
-RUN pnpm --filter @polygram/server deploy --prod /isolated
+RUN pnpm --filter @polygram/server deploy --legacy --prod /isolated
 
 # Production stage
 FROM node:22-alpine AS production
-
+RUN apk add --no-cache openssl
 WORKDIR /app
 
-# Copy the isolated package from builder
+# Copy the isolated package package.json and node_modules
 COPY --from=builder /isolated .
 
-# Ensure the build artifacts are present (pnpm deploy might not include dist if ignored)
+# Copy the build artifacts (including the generated and compiled Prisma client)
 COPY --from=builder /app/apps/server/dist ./dist
+# Shared package dist
+COPY --from=builder /app/packages/shared/dist ./node_modules/@polygram/shared/dist
 
 # Expose port
 EXPOSE 3000
 
-# Start from the flat isolated structure
-# Since we deployed @polygram/server, apps/server/dist becomes ./dist
-# Based on previous build check, index.js is at dist/apps/server/src/index.js
+# Start the server
 CMD ["node", "dist/apps/server/src/index.js"]
