--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,8 @@
-# Avoid symlink-hell in Docker with pnpm
-node-linker=hoisted
+# pnpm configuration for monorepo
+shamefully-hoist=true
 public-hoist-pattern[]=*prisma*
 auto-install-peers=true
+strict-peer-dependencies=false
+resolution-mode=highest
+prefer-workspace-packages=true
+link-workspace-packages=true
