--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -15,46 +15,47 @@
   },
   "dependencies": {
     "@polygram/shared": "workspace:*",
-    "@telegram-apps/telegram-ui": "^2.1.9",
-    "@tma.js/sdk-react": "^3.0.8",
+    "@telegram-apps/sdk-react": "^3.3.9",
+    "@telegram-apps/telegram-ui": "^2.1.13",
     "@tonconnect/ui-react": "^2.2.0",
-    "clsx": "^2.0.0",
+    "clsx": "^2.1.1",
     "eruda": "^3.4.3",
-    "framer-motion": "^11.0.0",
+    "framer-motion": "^11.18.2",
     "lightweight-charts": "^5.1.0",
-    "lucide-react": "^0.563.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-router-dom": "^6.30.1",
-    "tailwind-merge": "^2.0.0",
-    "zustand": "^4.5.2"
+    "lucide-react": "^0.474.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-router-dom": "^7.1.5",
+    "tailwind-merge": "^3.0.1",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.23.0",
     "@testing-library/jest-dom": "^6.0.0",
     "@testing-library/react": "^14.0.0",
-    "@types/node": "^20.19.11",
-    "@types/react": "^18.3.24",
-    "@types/react-dom": "^18.3.7",
-    "@typescript-eslint/eslint-plugin": "^8.28.0",
-    "@typescript-eslint/parser": "^8.28.0",
-    "@vitejs/plugin-react-swc": "^3.11.0",
-    "@vitest/coverage-v8": "^3.2.4",
-    "autoprefixer": "^10.4.24",
+    "@types/node": "^22.13.1",
+    "@types/react": "^19.0.8",
+    "@types/react-dom": "^19.0.3",
+    "@typescript-eslint/eslint-plugin": "^8.23.0",
+    "@typescript-eslint/parser": "^8.23.0",
+    "@vitejs/plugin-react-swc": "^3.8.0",
+    "@vitest/coverage-v8": "^3.0.5",
+    "autoprefixer": "^10.4.20",
     "cross-env": "^7.0.3",
-    "eslint": "^9.34.0",
-    "eslint-plugin-react": "^7.37.5",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "globals": "^15.15.0",
-    "jsdom": "^24.0.0",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.19",
-    "terser": "^5.44.0",
-    "typescript": "^5.9.2",
-    "typescript-eslint": "^8.40.0",
-    "vite": "^6.3.5",
-    "vite-plugin-mkcert": "^1.17.8",
+    "eslint": "^9.19.0",
+    "eslint-plugin-react": "^7.37.4",
+    "eslint-plugin-react-hooks": "^5.1.0",
+    "globals": "^15.14.0",
+    "jsdom": "^26.0.0",
+    "lightningcss": "^1.29.0",
+    "postcss": "^8.5.1",
+    "tailwindcss": "^3.4.17",
+    "terser": "^5.37.0",
+    "typescript": "^5.7.3",
+    "typescript-eslint": "^8.23.0",
+    "vite": "^6.4.1",
+    "vite-plugin-mkcert": "^1.17.6",
     "vite-tsconfig-paths": "^5.1.4",
-    "vitest": "^3.0.0"
+    "vitest": "^3.0.5"
   }
 }
