--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -21,32 +21,34 @@
     "@fastify/cors": "^10.0.0",
     "@fastify/rate-limit": "^10.3.0",
     "@fastify/websocket": "^11.0.0",
-    "@google/genai": "^1.39.0",
     "@polygram/shared": "workspace:*",
-    "@prisma/client": "^6.0.0",
+    "@prisma/adapter-pg": "^7.3.0",
+    "@prisma/client": "^7.3.0",
     "@ton/core": "^0.63.0",
     "@ton/crypto": "^3.3.0",
-    "axios": "^1.13.4",
-    "dotenv": "^16.4.5",
-    "fastify": "^5.0.0",
-    "openai": "^6.17.0",
+    "axios": "^1.7.9",
+    "dotenv": "^16.4.7",
+    "fastify": "^5.2.1",
+    "openai": "^4.82.0",
+    "pg": "^8.18.0",
     "telegraf": "^4.16.3",
     "tweetnacl": "^1.0.3",
-    "ws": "^8.19.0",
-    "zod": "^3.23.8"
+    "ws": "^8.18.0",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
-    "@eslint/js": "^9.0.0",
-    "@types/node": "^20.0.0",
-    "@types/ws": "^8.18.1",
-    "@typescript-eslint/eslint-plugin": "^8.0.0",
-    "@typescript-eslint/parser": "^8.0.0",
-    "@vitest/coverage-v8": "^3.2.4",
-    "eslint": "^9.0.0",
-    "globals": "^15.0.0",
-    "prisma": "^6.0.0",
-    "tsx": "^4.0.0",
-    "typescript": "^5.0.0",
-    "vitest": "^3.0.0"
+    "@eslint/js": "^9.19.0",
+    "@types/node": "^22.13.1",
+    "@types/pg": "^8.16.0",
+    "@types/ws": "^8.5.14",
+    "@typescript-eslint/eslint-plugin": "^8.23.0",
+    "@typescript-eslint/parser": "^8.23.0",
+    "@vitest/coverage-v8": "^3.0.5",
+    "eslint": "^9.19.0",
+    "globals": "^15.14.0",
+    "prisma": "^7.3.0",
+    "tsx": "^4.19.2",
+    "typescript": "^5.7.3",
+    "vitest": "^3.0.5"
   }
 }
