--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -23,8 +23,8 @@
     "framer-motion": "^11.18.2",
     "lightweight-charts": "^5.1.0",
     "lucide-react": "^0.474.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "react-router-dom": "^7.1.5",
     "tailwind-merge": "^3.0.1",
     "zustand": "^5.0.3"
@@ -38,8 +38,10 @@
     "@types/react-dom": "^19.0.3",
     "@typescript-eslint/eslint-plugin": "^8.23.0",
     "@typescript-eslint/parser": "^8.23.0",
+    "@tailwindcss/vite": "^4.0.0",
+    "@tailwindcss/postcss": "^4.0.0",
     "@vitejs/plugin-react-swc": "^3.8.0",
-    "@vitest/coverage-v8": "^3.0.5",
+    "@vitest/coverage-v8": "4.0.18",
     "autoprefixer": "^10.4.20",
     "cross-env": "^7.0.3",
     "eslint": "^9.19.0",
@@ -49,13 +51,13 @@
     "jsdom": "^26.0.0",
     "lightningcss": "^1.29.0",
     "postcss": "^8.5.1",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^4.0.0",
     "terser": "^5.37.0",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.23.0",
-    "vite": "^6.4.1",
+    "vite": "^7.3.1",
     "vite-plugin-mkcert": "^1.17.6",
     "vite-tsconfig-paths": "^5.1.4",
-    "vitest": "^3.0.5"
+    "vitest": "4.0.18"
   }
 }
