--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -31,6 +31,7 @@
     "fastify": "^5.2.1",
     "openai": "^4.82.0",
     "pg": "^8.18.0",
+    "prisma": "^7.3.0",
     "telegraf": "^4.16.3",
     "tweetnacl": "^1.0.3",
     "ws": "^8.18.0",
@@ -43,12 +44,11 @@
     "@types/ws": "^8.5.14",
     "@typescript-eslint/eslint-plugin": "^8.23.0",
     "@typescript-eslint/parser": "^8.23.0",
-    "@vitest/coverage-v8": "^3.0.5",
+    "@vitest/coverage-v8": "4.0.18",
     "eslint": "^9.19.0",
     "globals": "^15.14.0",
-    "prisma": "^7.3.0",
     "tsx": "^4.19.2",
     "typescript": "^5.7.3",
-    "vitest": "^3.0.5"
+    "vitest": "4.0.18"
   }
 }
