--- a/apps/client/nginx.conf
+++ b/apps/client/nginx.conf
@@ -2,6 +2,29 @@ server {
     listen 80;
     server_name localhost;
 
+    # Proxy API requests to backend (avoid CORS and hardcoded URLs)
+    location /api/ {
+        proxy_pass http://server:3000/api/;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_cache_bypass $http_upgrade;
+    }
+
+    # Proxy WebSocket requests
+    location /ws {
+        proxy_pass http://server:3000/ws;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_set_header Host $host;
+        proxy_read_timeout 86400;
+    }
+
     location / {
         root /usr/share/nginx/html;
         index index.html index.htm;
