--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -31,6 +31,8 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.23.0",
+    "@tailwindcss/postcss": "^4.0.0",
+    "@tailwindcss/vite": "^4.0.0",
     "@testing-library/jest-dom": "^6.0.0",
     "@testing-library/react": "^14.0.0",
     "@types/node": "^22.13.1",
@@ -38,8 +40,6 @@
     "@types/react-dom": "^19.0.3",
     "@typescript-eslint/eslint-plugin": "^8.23.0",
     "@typescript-eslint/parser": "^8.23.0",
-    "@tailwindcss/vite": "^4.0.0",
-    "@tailwindcss/postcss": "^4.0.0",
     "@vitejs/plugin-react-swc": "^3.8.0",
     "@vitest/coverage-v8": "4.0.18",
     "autoprefixer": "^10.4.20",
@@ -51,6 +51,7 @@
     "jsdom": "^26.0.0",
     "lightningcss": "^1.29.0",
     "postcss": "^8.5.1",
+    "rollup-plugin-visualizer": "^6.0.5",
     "tailwindcss": "^4.0.0",
     "terser": "^5.37.0",
     "typescript": "^5.7.3",
