--- a/apps/server/tsconfig.json
+++ b/apps/server/tsconfig.json
@@ -7,11 +7,14 @@
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
+    "allowJs": true,
+    "checkJs": false,
     "forceConsistentCasingInFileNames": true,
     "paths": {
-      "@polygram/shared": ["../../packages/shared/src/index.ts"]
+      "@polygram/shared": ["../../packages/shared/src/index.ts"],
+      "@prisma/client": ["./src/generated/prisma/index"]
     },
     "baseUrl": "."
   },
-  "include": ["src/**/*", "../../packages/shared/src/**/*"]
+  "include": ["src/**/*", "src/generated/**/*", "../../packages/shared/src/**/*"]
 }
