fix: correct Prisma generator and tsconfig path
- Change generator from prisma-client to prisma-client-js

- Fix tsconfig path: client -> index

- Add binaryTargets for Alpine Linux

--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -7,7 +7,8 @@
     "dev": "tsx src/index.ts",
     "dev:watch": "tsx watch src/index.ts",
     "build": "tsc",
-    "start": "node dist/index.js",
+    "postbuild": "node -e \"require('fs').writeFileSync('dist/apps/server/src/generated/prisma/package.json', '{ \\\"type\\\": \\\"commonjs\\\" }')\"",
+    "start": "node dist/apps/server/src/index.js",
     "test": "vitest run --passWithNoTests",
     "test:watch": "vitest",
     "lint": "eslint src --ignore-pattern src/infrastructure/prisma",
